@@ -36,6 +36,9 @@ import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.Date;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
+
+import static org.testcontainers.shaded.org.awaitility.Awaitility.await;
 
 @SpringBootTest
 @EmbeddedKafka(
@@ -134,17 +137,19 @@ class SubmissionsServiceTest extends WithPostgresTest {
 
         Assertions.assertEquals(newSubmission, sendResult.getProducerRecord().value());
 
-        Thread.sleep(10000); // wait for processing
+        await().atMost(15, TimeUnit.SECONDS).until(() -> { // wait for processing
+            var submissions = submissionRepository.findAll().stream().toList();
+            var testResults = testResultRepository.findAll().stream().toList();
+            return submissions.size() == 1 && testResults.size() == 1;
+        });
 
-        var submissions = submissionRepository.findAll().stream().toList();
-        Assertions.assertEquals(1, submissions.size());
-        var submission = submissions.get(0);
+        var submission = submissionRepository.findAll().stream().toList().getFirst();
         Assertions.assertEquals(task, submission.getTask());
         Assertions.assertEquals(sourceCode, submission.getUserSourceCode());
 
         var testResults = testResultRepository.findAll().stream().toList();
         Assertions.assertEquals(1, testResults.size());
-        var testResult = testResults.get(0);
+        var testResult = testResults.getFirst();
         Assertions.assertEquals(test, testResult.getTest());
         Assertions.assertTrue(testResult.getPassed());
     }
